--- a/friends.html
+++ b/friends.html
@@ -23,52 +23,60 @@
       </div>
     </div>
 
-<header class="screen__header">
-    <h1 class="screen__header__title">Friends</h1>
-    <div class="screen__header__icons">
+    <header class="screen__header">
+      <h1 class="screen__header__title">Friends</h1>
+      <div class="screen__header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
-    </div>
-</header>
+        <span
+          ><span class="nav__newellipsis-header"></span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
+      </div>
+    </header>
 
-<a href="#" id="friends-display-link"><i class="fas fa-info-circle"></i> Friends Names Display  <i class="fas fa-chevron-right fa-xs"></i></a>
+    <a href="#" id="friends-display-link"
+      ><i class="fas fa-info-circle"></i> Friends Names Display
+      <i class="fas fa-chevron-right fa-xs"></i
+    ></a>
 
-<main class="friends-screen">
-    <div class="user__component">
+    <main class="friends-screen">
+      <div class="user__component">
         <div class="user-component__column">
-        <img class="user-component__avatar user-component__avatar--xl" src="img/logo.png" />
-        <div class="user-component__text">
+          <img
+            class="user-component__avatar user-component__avatar--xl"
+            src="img/logo.png"
+          />
+          <div class="user-component__text">
             <h4 class="user-component__title">Masterpiece_Lyu</h4>
-          <!--  <h6 class="user-component__subtitle">나를 죽이지 못하는 고통을 날 더 강하게 만든다</h6> -->
-        </div>
+            <!--  <h6 class="user-component__subtitle">나를 죽이지 못하는 고통을 날 더 강하게 만든다</h6> -->
+          </div>
         </div>
         <div class="user-component__column"></div>
-    </div>
+      </div>
 
-<div class="firends-screen__channel">
-    <div class="friends_screen__channel-header">Channel <i class="fas fa-chevron-up fa-xs"></i></div>
-</div>
-<div class="user__component">
-    <div class="user-component__column">
-    <img class="user-component__avatar user-component__avatar--sm" src="img/kakaoch.jpeg" />
-    <div class="user-component__text">
-        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-
-    </div>
-    </div>
-    <div class="user-component__column">
-      <span>2 
-        <i class="fas fa-chevron-right fa-xs"></i></span>
-    </div>
-</div>
-
-</main>
-
-
-
-
-
+      <div class="firends-screen__channel">
+        <div class="friends_screen__channel-header">
+          Channel <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+      </div>
+      <div class="user__component">
+        <div class="user-component__column">
+          <img
+            class="user-component__avatar user-component__avatar--sm"
+            src="img/kakaoch.jpeg"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title user-component__title--not-bold">
+              Channel
+            </h4>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span>2 <i class="fas fa-chevron-right fa-xs"></i></span>
+        </div>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -77,19 +85,32 @@
             ><i class="fas fa-user fa-2x"></i
           ></a>
         </li>
-        <li class="nav__btn"></li>
+        <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-              <span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></a>
+            <span class="nav__notification badge">1</span
+            ><i class="far fa-comment fa-2x"></i
+          ></a>
         </li>
-        <li class="nav__btn"></li>
-          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
+        <li class="nav__btn">
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
-        <li class="nav__btn"></li>
+        <li class="nav__btn">
           <a class="nav__link" href="more.html">
-              <span class="nav__newellipsis"></span><i class="fas fa-ellipsis-h fa-2x"></i></a>
+            <span class="nav__newellipsis"></span
+            ><i class="fas fa-ellipsis-h fa-2x"></i
+          ></a>
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big!</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/82fa1218b4.js"
