--- a/find.html
+++ b/find.html
@@ -27,17 +27,16 @@
     <h1 class="screen__header__title">Find</h1>
     <div class="screen__header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><span class="nav__newellipsis-header"></span><i class="fas fa-cog fa-lg"></i></span>
-        
+        <span><span class="nav__newellipsis-header"></span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
     </div>
 </header>
 
 <main class="main-screen">
-    <div class="find-icons">
-        <div class="find-icons__icon"><i class="fas fa-qrcode"></i><span>QR Code</span></div>
-        <div class="find-icons__icon"><i class="far fa-address-book"></i><span>Add by Contacts</span></div>
-        <div class="find-icons__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
-        <div class="find-icons__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
+    <div class="icon-row">
+        <div class="icon-row__icon"><i class="fas fa-qrcode"></i><span>QR Code</span></div>
+        <div class="icon-row__icon"><i class="far fa-address-book"></i><span>Add by Contacts</span></div>
+        <div class="icon-row__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
+        <div class="icon-row__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
     </div>
     <div class="recommended-friends">
       <h6 class="recommended-friends__title">Recommended-friends</h6>
@@ -51,7 +50,7 @@
   <div class="open-post">
     <div class="open-post__column">
       <h5 class="open-post__title">#BTS</h5>
-      <h6 class="open-post__hashtags">#bts #army #friends</h6>
+      <h6 class="open-post__hashtags">#BTS #ARMY #FRIENDS</h6>
       <div class="open-post__members">
         <img src="img/girl.jpg" />
         <span class="open-post__member-count">802 members</span>
@@ -68,6 +67,29 @@
     </div>
   </div>
 </div>
+
+<div class="open-post">
+  <div class="open-post__column">
+    <h5 class="open-post__title">BTS Gang~</h5>
+    <h6 class="open-post__hashtags">#englishonly #ipurpleyou #jimin #taetae</h6>
+    <div class="open-post__members">
+      <img src="img/jimin.jpeg" />
+      <span class="open-post__member-count">299 members</span>
+      <div class="devider"></div>
+      <span class="open-post__member-status">Active</span>
+    </div>
+  </div>
+  <div class="open-post__column">
+    <div class="open-post__photo ">
+      <img src="img/V.jpeg"> 
+      <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>215</span></div>
+    </div>
+
+  </div>
+</div>
+</div>
+
+
 </main>
 
 
@@ -81,19 +103,23 @@
           <a class="nav__link" href="friends.html"
             ><i class="far fa-user fa-2x"></i></a>
         </li>
-        <li class="nav__btn"></li>
+        <li class="nav__btn">
           <a class="nav__link" href="chats.html">
               <span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></i></a>
         </li>
-        <li class="nav__btn"></li>
+        <li class="nav__btn">
           <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
         </li>
-        <li class="nav__btn"></li>
+        <li class="nav__btn">
           <a class="nav__link" href="more.html">
               <span class="nav__newellipsis"></span><i class="fas fa-ellipsis-h fa-2x"></i></a>
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big!</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/82fa1218b4.js"
