--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       </form>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big!</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/82fa1218b4.js"
       crossorigin="anonymous"
