--- a/friends.html
+++ b/friends.html
@@ -26,8 +26,12 @@
     <header class="screen__header">
       <h1 class="screen__header__title">Friends</h1>
       <div class="screen__header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
+        <span
+          ><a href="find.html"><i class="fas fa-search fa-lg"></i></a
+        ></span>
+        <span
+          ><a href="#"><i class="fas fa-music fa-lg"></i></a
+        ></span>
         <span
           ><span class="nav__newellipsis-header"></span
           ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
