--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <form action="friends.html" method="" id="login-form">
       <input name="username" type="text" placeholder="Email or phone number" />
       <input name="password" type="password" placeholder="Password" />
-      <input type="submit" value="Log in" />
-      <input type="submit" value="Sign up" />
+      <input id="login-formBtn" type="submit" value="Log in" />
+      <input id="login-formBtn" type="submit" value="Sign up" />
       <a href="">Find KaKao Account or Password</a>
       </form>
     </form>
